--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shapes-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://faridEsnaashari.github.io/boardBroadcaster/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -13,6 +14,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
