--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
