--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-localization": "^1.0.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io": "^4.6.2",
